# sha256

./: .flake8  LICENSE  Makefile  README.md  constants.py  hasher.py  pyproject.toml  tests.py  utils.py
src/sha256/: __init__.py  __main__.py  constants.py  hasher.py  utils.py
tests/: tests.py
